Travel::Status::DE::VRR 1.16 - Fri May 01 2020

    * Use HTTPS for  DING, VOR, LinzAG, VGN, VRR, VRR2, VVS, NVBW, KVV and BSVG
      services
    * Update VGN, VVO, VMV and KVV service URLs
    * Remove IVB, VVV and VRNdelfi services
    * Re-add Verbundlinie service

Travel::Status::DE::VRR 1.15 - Wed Jul 05 2017

    * Fix encoding issues caused by recent API changes

Travel::Status::DE::VRR 1.14 - Sat Oct 08 2016

    * efa-m: Fix broken encoding in --list output

Travel::Status::DE::VRR 1.13 - Sun Mar 06 2016

    * EFA: Add accessors name_candidates and place_candidates
    * EFA: errstr: in cases of ambiguous input, the name/place
      candidates list is no longer encoded in the errstr accessor. Use the
      new name_candidates / place_candidates accessors instead.

Travel::Status::DE::VRR 1.12 - Tue Aug 04 2015

    * EFA: Add static method get_efa_urls
    * Line: Add mot and mot_name accessors
    * Result: Add mot and mot_name accessors
    * efa-m: Add -A / --auto-url / --discover-and-print option
    * efa-m: Add -D / --discover option
    * efa-m: Add --list option
    * efa-m: Add -m / --mot option
    * efa-m: Add -s / --service option

Travel::Status::DE::VRR 1.11 - Tue Jun 30 2015

    * efa-m: Remove -V alias for --version
    * efa-m: Add -V / --track-via option
    * efa-m: Add -O / --output option with outputtypes
      route_after, route_before, fullroute and route
    * efa-m: Always output schedule data when absolute times are requested.
      As before, delays are indicated by a +xyz mark next to the time

Travel::Status::DE::VRR 1.10 - Thu Jun 25 2015

    * Result->delay: return undef when no data is available. This allows to
      distinguish between on-time departures (delay 0) and departures without
      realtime data (delay undef)
    * EFA->new: Add full_routes config option
    * EFA: Add identified_data accessor
    * Result: Add route_pre, route_post and route_interesting accessors