@@ -1,3 +1,9 @@
+Travel::Status::DE::VRR 1.17 - Sat May 02 2020
+
+    * Add MVV (Münchner Verkehrs- und Tarifverbund) and VAG (Freiburger
+      Verkehrs AG) services
+    * Fix encoding when using VOR or LinzAG services
+
 Travel::Status::DE::VRR 1.16 - Fri May 01 2020
 
     * Use HTTPS for  DING, VOR, LinzAG, VGN, VRR, VRR2, VVS, NVBW, KVV and BSVG
